src/corelib/thread/qfutureinterface_p.h
@@ -58,6 +58,7 @@
 #include <QtCore/qlist.h>
 #include <QtCore/qwaitcondition.h>
 #include <QtCore/qrunnable.h>
+#include <QtCore/qthreadpool.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -169,6 +170,10 @@ public:
     QtPrivate::ExceptionStore m_exceptionStore;
     QString m_progressText;
     QRunnable *runnable;
+    QThreadPool *m_pool;
+
+    inline QThreadPool *pool() const
+    { return m_pool ? m_pool : QThreadPool::globalInstance(); }
 
     // Internal functions that does not change the mutex state.
     // The mutex must be locked when calling these.
